--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-simply/state": "^1.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +11,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
+    "animate.css": "^3.7.2",
     "react": "^16.13.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "state": "^0.2.0",
+    "styled-components": "^5.0.1",
+    "theme-provider": "^1.0.8",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -36,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-animate-on-scroll": "^2.1.2",
+    "@types/react-scroll": "^1.5.4"
   }
 }
